// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maintenance presentation > snapshots narrow color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile Liftoff-managed core files

[1mProject versions[22m
Liftoff CLI: 0.9.2
Project generated by: 0.9.2

[1mLiftoff core drift[22m
~ .liftoff/governance/context.json  untouched since generation; template changed

[1mProject component provisioning: environment:test[22m
- create environments/test/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent

[1mManifest maintenance[22m
- record the requested project configuration intent after safe provisioning

[33m[warn][39m [1mLiftoff core maintenance available[22m: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots narrow no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile Liftoff-managed core files

Project versions
Liftoff CLI: 0.9.2
Project generated by: 0.9.2

Liftoff core drift
~ .liftoff/governance/context.json  untouched since generation; template changed

Project component provisioning: environment:test
- create environments/test/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent

Manifest maintenance
- record the requested project configuration intent after safe provisioning

[warn] Liftoff core maintenance available: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots plain doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "LIFTOFF / DOCTOR - Inspect CLI, workstation, project, runtime, and cloud readiness

CLI
[ok] version: Liftoff 0.9.2

Environment
[ok] node: Version 24.20.0
[ok] python: Version 3.14.0
[ok] uv: Version 0.12.7
[ok] docker: Version 27.0.0
[ok] Docker daemon: 27.0.0
[ok] opentofu: Version 1.12.6
[ok] azure-cli: Version 2.70.0
[ok] Azure authentication: Healthy
[ok] openspec: Version 1.11.0
[ok] github-copilot: Version 1.0.0
[warn] GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - Run \`copilot\` and sign in if prompted.

Project
[ok] manifest: valid, 4 managed core and 45 project provenance entries
[ok] version: generated by 0.9.2, CLI 0.9.2
[ok] repository governance: local single-maintainer-gitflow policy 1 handoff is intact; live enforcement is not inferred
[ok] framework contract: OpenSpec 1.11.0
[ok] selected agents: github-copilot
[ok] framework markers: 1 selected integration verified
[ok] python-fastapi project: stack configuration is valid
[ok] managed core: Liftoff core is current; project templates are not compared

Runtime
[error] .env: missing - copy .env.example to .env
[ok] compose: docker compose config is valid

Cloud - azure
[ok] azure auth: authenticated

[error] Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots plain update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile Liftoff-managed core files

Stage: Apply safe Liftoff core changes
<project>
Applied Liftoff core changes
- wrote .liftoff/governance/context.json

Provisioned project components
- wrote environments/test/backend.env
- wrote infrastructure/opentofu/azure/environments/test.tfvars

[ok] Updated project: 1 core written, 2 project provisioned, 0 core skipped
Completion
Manifest version: 0.9.2

Next recommended command
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots plain update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile Liftoff-managed core files

Project versions
Liftoff CLI: 0.9.2
Project generated by: 0.9.2

Liftoff core drift
~ .liftoff/governance/context.json  untouched since generation; template changed

Project component provisioning: environment:test
- create environments/test/backend.env  destination is absent
- create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent

Manifest maintenance
- record the requested project configuration intent after safe provisioning

[warn] Liftoff core maintenance available: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ [1m[36mLIFTOFF / UPDATE[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ [2mReconcile Liftoff-managed core files[22m                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject versions[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.9.2                                                                  │
│ Project generated by  0.9.2                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mLiftoff core drift[39m[22m ─────────────────────────────────────────────────────────────────────────┐
│ [1mChange  Artifact                          Reason[22m                                             │
│ [2m──────  ────────────────────────────────  ────────────────────────────────────────────[22m       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject component provisioning: environment:test[39m[22m ───────────────────────────────────────────┐
│ • create environments/test/backend.env  destination is absent                                │
│ • create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mManifest maintenance[39m[22m ───────────────────────────────────────────────────────────────────────┐
│ • record the requested project configuration intent after safe provisioning                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
[33m![39m [1mLiftoff core maintenance available[22m: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots rich doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "┌─ LIFTOFF / DOCTOR ───────────────────────────────────────────────────────────────────────────┐
│ Inspect CLI, workstation, project, runtime, and cloud readiness                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ CLI ────────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ version: Liftoff 0.9.2                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Environment ────────────────────────────────────────────────────────────────────────────────┐
│ ✓ node: Version 24.20.0                                                                      │
│ ✓ python: Version 3.14.0                                                                     │
│ ✓ uv: Version 0.12.7                                                                         │
│ ✓ docker: Version 27.0.0                                                                     │
│ ✓ Docker daemon: 27.0.0                                                                      │
│ ✓ opentofu: Version 1.12.6                                                                   │
│ ✓ azure-cli: Version 2.70.0                                                                  │
│ ✓ Azure authentication: Healthy                                                              │
│ ✓ openspec: Version 1.11.0                                                                   │
│ ✓ github-copilot: Version 1.0.0                                                              │
│ ! GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - │
│ Run \`copilot\` and sign in if prompted.                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project ────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ manifest: valid, 4 managed core and 45 project provenance entries                          │
│ ✓ version: generated by 0.9.2, CLI 0.9.2                                                     │
│ ✓ repository governance: local single-maintainer-gitflow policy 1 handoff is intact; live    │
│ enforcement is not inferred                                                                  │
│ ✓ framework contract: OpenSpec 1.11.0                                                        │
│ ✓ selected agents: github-copilot                                                            │
│ ✓ framework markers: 1 selected integration verified                                         │
│ ✓ python-fastapi project: stack configuration is valid                                       │
│ ✓ managed core: Liftoff core is current; project templates are not compared                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Runtime ────────────────────────────────────────────────────────────────────────────────────┐
│ × .env: missing - copy .env.example to .env                                                  │
│ ✓ compose: docker compose config is valid                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Cloud - azure ──────────────────────────────────────────────────────────────────────────────┐
│ ✓ azure auth: authenticated                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
× Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots rich no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile Liftoff-managed core files                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.9.2                                                                  │
│ Project generated by  0.9.2                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Liftoff core drift ─────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                          Reason                                             │
│ ──────  ────────────────────────────────  ────────────────────────────────────────────       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project component provisioning: environment:test ───────────────────────────────────────────┐
│ • create environments/test/backend.env  destination is absent                                │
│ • create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Manifest maintenance ───────────────────────────────────────────────────────────────────────┐
│ • record the requested project configuration intent after safe provisioning                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Liftoff core maintenance available: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile Liftoff-managed core files                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Apply safe Liftoff core changes
<project>
┌─ Applied Liftoff core changes ───────────────────────────────────────────────────────────────┐
│ • wrote .liftoff/governance/context.json                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Provisioned project components ─────────────────────────────────────────────────────────────┐
│ • wrote environments/test/backend.env                                                        │
│ • wrote infrastructure/opentofu/azure/environments/test.tfvars                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Updated project: 1 core written, 2 project provisioned, 0 core skipped
┌─ Completion ─────────────────────────────────────────────────────────────────────────────────┐
│ Manifest version  0.9.2                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots rich update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile Liftoff-managed core files                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.9.2                                                                  │
│ Project generated by  0.9.2                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Liftoff core drift ─────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                          Reason                                             │
│ ──────  ────────────────────────────────  ────────────────────────────────────────────       │
│ ~       .liftoff/governance/context.json  untouched since generation; template changed       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project component provisioning: environment:test ───────────────────────────────────────────┐
│ • create environments/test/backend.env  destination is absent                                │
│ • create infrastructure/opentofu/azure/environments/test.tfvars  destination is absent       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Manifest maintenance ───────────────────────────────────────────────────────────────────────┐
│ • record the requested project configuration intent after safe provisioning                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Liftoff core maintenance available: 4 to write, 0 core conflict(s), 0 core orphan(s), 3 core unchanged
$ liftoff update
",
}
`;
